* stretched content width to 1000px * fixed header image * removed donate button

--- a/styles/everything.css
+++ b/styles/everything.css
@@ -1,7 +1,7 @@
 /*Copyright 2014 Carl Johnson IV*/
 body
 {
-	width: 800px;
+	width: 1000px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 1em;
